// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Props Handling basic case 1`] = `
Object {
  "handlers": Object {
    "setUsers": [Function],
  },
  "users": undefined,
}
`;

exports[`Props Handling no props given 1`] = `
Object {
  "handlers": Object {},
}
`;

exports[`Props Handling normal case 1`] = `
Object {
  "handlers": Object {
    "setIsVisible": [Function],
    "setUsers": [Function],
    "setUsersLoaded": [Function],
    "toggleIsVisible": [Function],
  },
  "isVisible": false,
  "users": Object {},
  "usersLoaded": false,
}
`;
